--- a/IST541/Labfinal/page6.html
+++ b/IST541/Labfinal/page6.html
@@ -17,6 +17,7 @@
 	<br><br>
 <body>
 	<h2>Sources:
+		<ul style="list-style-type: square;">
 	<li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li>
 	<li>https://serenityyogawellness.com/blog/meditation-101 </li>
 	<li>https://psychcentral.com/health/types-of-meditation </li>
@@ -24,6 +25,6 @@
 	<li>https://easy-peasy.ai/ai-image-generator/images/tranquil-cartoon-yoga-character-nature-peaceful-meditation </li>
 	<li>https://www.youtube.com/watch?v=92i5m3tV5XY&t=1s </li>
 	<li>https://www.youtube.com/watch?v=thcEuMDWxoI </li>	
-	</h2>
+	</h2></ul>
 </body>
 </html>
