--- a/IST541/Labfinal/page5.html
+++ b/IST541/Labfinal/page5.html
@@ -23,9 +23,10 @@
       <div class="stepContent"> 
         <div class="stepDescription">
           <p>Now that you have learned some aspects of meditation, take a moment and try it with the following video: 
+			  <ul style="list-style-type: square;">
 			  <li>What comes up?</li> 
 			  <li>What is keeping you from focusing on the breath</li> 
-			  <li>How does it feel afterwards?</li>
+			  <li>How does it feel afterwards?</li> </ul>
             As Jack kornfield would say "this is meditation practice not meditation prefect." This will take time to see the effect.
           </p>
 </div><!-- /.stepContent -->
