--- a/IST541/Labfinal/page5.html
+++ b/IST541/Labfinal/page5.html
@@ -18,7 +18,7 @@
 	<br><br>
 	
 	<section id="step1" class="step">
-      <div class="stepTitle">Knowledge</div>
+      <div class="stepTitle"></div>
 
       <div class="stepContent"> 
         <div class="stepDescription">
