--- a/IST541/Labfinal/page5.html
+++ b/IST541/Labfinal/page5.html
@@ -27,7 +27,7 @@
 			  <li>What comes up?</li> 
 			  <li>What is keeping you from focusing on the breath</li> 
 			  <li>How does it feel afterwards?</li> </ul>
-            As Jack kornfield would say "this is meditation practice not meditation prefect." This will take time to see the effect.
+            As Jack kornfield would say "this is meditation practice not meditation perfect." This will take time to see the effect.
           </p>
 </div><!-- /.stepContent -->
 		  
