--- a/IST541/Labfinal/page3.html
+++ b/IST541/Labfinal/page3.html
@@ -31,15 +31,15 @@
 			</ol>
 			</p>
 			<p class="note">
-				<span class="material-icons">*</span>
-				This is a process and will take time for you to see the effect.
+				<span class="material-icons"></span>
+				*This is a process and will take time for you to see the effect.
 			    </p> </h2>
 		<div class="stepImage">
           <img src="../Labfinal/img/types.jpg"
 			   </div>
       </div><!-- /.stepContent -->
     </details>
-	<h3>Source: <li>https://psychcentral.com/health/types-of-meditation </li> </h3>	
+		
 <details>
       <summary class="stepTitle">Research Finding </summary>
 
@@ -57,6 +57,6 @@
         </div>
       </div><!-- /.stepContent -->
     </details><!--Step2-->
-      <h3>Source: <li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li> </h3>
+      
 	</body>
 </html>
