--- a/IST541/Labfinal/page6.html
+++ b/IST541/Labfinal/page6.html
@@ -17,7 +17,7 @@
 	<br><br>
 <body>
 	<h2>Sources:
-		<ul style="list-style-type: square;">
+		<ul style="list-style-type:square">
 	<li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li>
 	<li>https://serenityyogawellness.com/blog/meditation-101 </li>
 	<li>https://psychcentral.com/health/types-of-meditation </li>
