--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -9,8 +9,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <body>
-<a href="index.html"> Home </a> <a href="page2.html"> History </a> <a href="page3.html"> How it works </a> <a href="page4.html"> What to expect </a> <a href="page5.html"> Quiz </a> <a href="page6.html"> References </a> <br>
-<br>
+    <a href="index.html"> Home </a> 
+	<a href="page2.html"> History </a> 
+	<a href="page3.html"> How it works </a> 
+	<a href="page4.html"> What to expect </a> 
+	<a href="page5.html"> Quiz </a> 
+	<a href="page6.html"> References </a> 
+	<br><br>
+	
 <div id="wrapper">
   <h1>What we think meditation look like Vs. What it actually is.</h1>
   <h3 id="hint">Hint: Hover over the image below to find out!</h3>
@@ -30,6 +36,25 @@ function showAnswer() {
 function hideAnswer() {
 	   $("#meditation").show();
 	   $("#thoughts").hide();
+	   $("#answer").html("");  
+	}
+</script>
+
+	<div id="wrapper">
+  <h1>Just because throughts come up, it doesnt represent who you are.</h1>
+  <h3 id="hint">Hint: Hover over the image below to find out!</h3>
+  <img onmouseenter="showAnswer()" id="flashlight"  src="img/cartoon-flashlight.jpg"/> <img onmouseleave="hideAnswer()" id="garbage" src="img/burning-garbage.jpg"/>
+  <div id="answer"></div>
+	
+	<script>
+function showAnswer() {
+	   $("#cartoon-flashlight").hide();
+	   $("#burning-garbage").show();
+	   $("#answer").html("<h2> Consider meditation as a flashlight.</h2>");
+	}
+function hideAnswer() {
+	   $("#cartoon-flashlight").show();
+	   $("#burning-garbage").hide();
 	   $("#answer").html("");  
 	}
 </script>
