--- a/IST541/Labfinal/index.html
+++ b/IST541/Labfinal/index.html
@@ -9,13 +9,15 @@
       rel="stylesheet">
 
 <body>
-	<a href="index.html"> Home </a>
-	<a href="page2.html"> History </a>
-	<a href="page3.html"> How it works </a>
+	<a href="index.html"> Home </a> 
+	<a href="page2.html"> History </a> 
+	<a href="page3.html"> How it works </a> 
 	<a href="page4.html"> What to expect </a>
-    <a href="page5.html"> Quiz </a>
-	<a href="page6.html"> References </a>
+	<a href="page5.html"> What to expect Pt2 </a>
+	<a href="page6.html"> Quiz </a> 
+	<a href="page7.html"> References </a> 
 	<br><br>
+	
 	<h1> Introduction </h1>
 	<h2> Welcome to intro to Meditiation, in this quick training we will be going over the history, how it works, and what to expect. 
 	
