--- a/IST541/Labfinal/page2.html
+++ b/IST541/Labfinal/page2.html
@@ -8,12 +8,13 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 <body>
-	<a href="index.html"> Home </a>
-	<a href="page2.html"> History </a>
-	<a href="page3.html"> How it works </a>
+	<a href="index.html"> Home </a> 
+	<a href="page2.html"> History </a> 
+	<a href="page3.html"> How it works </a> 
 	<a href="page4.html"> What to expect </a>
-    <a href="page5.html"> Quiz </a>
-	<a href="page6.html"> References </a>
+	<a href="page5.html"> What to expect Pt2 </a>
+	<a href="page6.html"> Quiz </a> 
+	<a href="page7.html"> References </a> 
   <br><br>
 	
 	<h2> 
