--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -12,9 +12,10 @@
     <a href="index.html"> Home </a> 
 	<a href="page2.html"> History </a> 
 	<a href="page3.html"> How it works </a> 
-	<a href="page4.html"> What to expect </a> 
-	<a href="page5.html"> Quiz </a> 
-	<a href="page6.html"> References </a> 
+	<a href="page4.html"> What to expect </a>
+	<a href="page5.html"> What to expect Pt2 </a>
+	<a href="page6.html"> Quiz </a> 
+	<a href="page7.html"> References </a> 
 	<br><br>
 	
 <div id="wrapper">
@@ -38,26 +39,6 @@ function hideAnswer() {
 	   $("#thoughts").hide();
 	   $("#answer").html("");  
 	}
-</script>
-
-	<div id="wrapper2">
-  <h1>Just because throughts come up, it doesnt represent who you are.</h1>
-  <h3 id="note">Hint: Hover over the image below to find out!</h3>
-  <img onmouseenter="showAnswer()" id="flashlight"  src="img/cartoon-flashlight.jpg"/> <img onmouseleave="hideAnswer()" id="garbage" src="img/burning-garbage.jpg"/>
-  <div id="image"></div>
-	
-	<script>
-function showAnswer() {
-	   $("#cartoon-flashlight").hide();
-	   $("#burning-garbage").show();
-	   $("#image").html("<h2> Consider meditation as a flashlight.</h2>");
-	}
-function hideAnswer() {
-	   $("#cartoon-flashlight").show();
-	   $("#burning-garbage").hide();
-	   $("#image").html("");  
-	}
-</script>
-		
+</script>	
 </body>
 </html>
