--- a/IST541/Labfinal/page6.html
+++ b/IST541/Labfinal/page6.html
@@ -2,31 +2,44 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>page6</title>
+<title>page5</title>
 </head>
 <link href="css/final.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-<a href="index.html"> Home </a>
-	<a href="page2.html"> History </a>
-	<a href="page3.html"> How it works </a>
-	<a href="page4.html"> What to expect </a>
-    <a href="page5.html"> Quiz </a>
-	<a href="page6.html"> References </a>
-	<br><br>
 <body>
-	<h2>Sources:
-		<ul style="list-style-type:square">
-	<li>https://news.stanford.edu/stories/2015/04/mindful-meditation-benefits-042215 </li>
-	<li>https://serenityyogawellness.com/blog/meditation-101 </li>
-	<li>https://psychcentral.com/health/types-of-meditation </li>
-	<li>https://mind.help/topic/meditation/ </li>
-	<li>https://easy-peasy.ai/ai-image-generator/images/tranquil-cartoon-yoga-character-nature-peaceful-meditation </li>
-	<li>https://www.vectorstock.com/royalty-free-vector/burning-garbage-in-trash-can-near-wall-of-house-vector-47192022</li>	
-	<li>https://www.vectorstock.com/royalty-free-vectors/cartoon-flashlight-vectors</li>
-	<li>https://www.youtube.com/watch?v=92i5m3tV5XY&t=1s </li>
-	<li>https://www.youtube.com/watch?v=thcEuMDWxoI </li>	
-	</h2></ul>
+	<a href="index.html"> Home </a> 
+	<a href="page2.html"> History </a> 
+	<a href="page3.html"> How it works </a> 
+	<a href="page4.html"> What to expect </a>
+	<a href="page5.html"> What to expect Pt2 </a>
+	<a href="page6.html"> Quiz </a> 
+	<a href="page7.html"> References </a> 
+	<br><br>
+	
+	<section id="step1" class="step">
+      <div class="stepTitle"></div>
+
+      <div class="stepContent"> 
+        <div class="stepDescription">
+          <h2><p>Now that you have learned some aspects of meditation, take a moment and try it with the following video: 
+			  <ul style="list-style-type: square;">
+			  <li>What comes up?</li> 
+			  <li>What is keeping you from focusing on the breath</li> 
+			  <li>How does it feel afterwards?</li> </ul>
+            As Jack kornfield would say "this is meditation practice not meditation perfect." This will take time to see the effect.
+			  </p> </h2>
+</div><!-- /.stepContent -->
+		  
+    </section>
+	<video  controls  width="500">
+<source src="video/Meditation.mp4" type="video/mp4" />
+<source src="video/meditation.ogg" type="video/ogg" />
+       <track id="entrack" label="English subtitles" kind="captions" src="video/captions.vtt" srclang="en" default>
+HTML5 Video not supported
+</video>
+
+
 </body>
 </html>
