--- a/IST541/Labfinal/page4.html
+++ b/IST541/Labfinal/page4.html
@@ -21,7 +21,7 @@
 <div id="wrapper">
   <h1>What we think meditation look like Vs. What it actually is.</h1>
   <h3 id="hint">Hint: Hover over the image below to find out!</h3>
-  <img onmouseenter="showAnswer()" id="Meditation"  src="img/meditation.jpg"/> <img onmouseleave="hideAnswer()" id="thoughts" src="img/thoughts.jpg"/>
+  <img onmouseenter="showAnswer()" id="meditation"  src="img/meditation.jpg"/> <img onmouseleave="hideAnswer()" id="thoughts" src="img/thoughts.jpg"/>
   <div id="answer"></div>
   <!-- This is a placeholder to display the answer--> 
   
